# codebase-copilot

./: .gitignore  README.md  requirements.txt  test_binding.py  test_chunker.py  test_day10_chat_command.py  test_day10_llm_streaming.py  test_day10_terminal_polish.py  test_day2_pipeline.py  test_day3_index_command.py  test_day4_ask_command.py  test_day4_llm_backend.py  test_day4_qa_pipeline.py  test_day5_patch_agent.py  test_day5_patch_command.py  test_day5_patch_prompt.py  test_day6_benchmark_command.py  test_day6_benchmark_comparison.py  test_day6_python_benchmark.py  test_day7_cli_output.py  test_day7_docs_manifest.py  test_day7_showcase_flow.py  test_day8_agent_command.py  test_day8_agent_tuning.py  test_day8_no_tool.py  test_day8_react_loop.py  test_day8_tool_dispatch.py  test_day9_embedding_comparison.py  test_day9_memory_chat.py  test_day9_semantic_embedder.py  test_embedder.py  test_index_builder.py  test_repo_loader.py
cpp/: CMakeLists.txt
cpp/include/: vector_index.h
cpp/src/: binding.cpp  vector_index.cpp
data/: day6_benchmark.md
docs/: codebase_copilot_architecture.html  codebase_copilot_architecture_explained.md  codebase_copilot_detailed_flow.html  codebase_copilot_detailed_flow.md  codebase_copilot_flow.html  codebase_copilot_flow_explained.md  day10_v1_llm_streaming.md  day10_v2_chat_command.md  day10_v3_terminal_polish.md  day1_v1_project_scaffold.md  day1_v2_cpp_binding.md  day1_v3_validation.md  day1_v4_environment_update.md  day2_v1_repo_loader.md  day2_v2_chunker.md  day2_v3_pipeline_validation.md  day3_v1_embedder.md  day3_v2_index_builder.md  (+28 more)
(+51 files in other folders)
